# agentic-service-py-template

./: .dockerignore  .env.example  .gitignore  .progress-checkpoint.md  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  function_app.py  pyproject.toml
alembic/: env.py
alembic/versions/: ecdbe7162ce3_initial.py
docs/: architecture.md
docs/diagrams/: components.mmd  layers.mmd  workflows.mmd
src/agentic_service_py_template/: __init__.py  config.py  main.py  models.py
src/agentic_service_py_template/ai/: __init__.py  observability.py  tools.py
src/agentic_service_py_template/ai/agents/: __init__.py  investment_advisor.py  investment_summary.py
src/agentic_service_py_template/api/: __init__.py  auth.py  observability.py  routes.py
src/agentic_service_py_template/azure_functions/: __init__.py  health_check_timer.py  queue_processor.py
tests/: test_main.py
tests/test_ai/: test_observability.py  test_tools.py
tests/test_ai/test_agents/: test_investment_advisor.py  test_investment_summary.py
tests/test_api/: conftest.py  test_auth.py  test_observability.py  test_routes.py
tests/test_azure_functions/: test_health_check_timer.py  test_queue_processor.py
tests/test_infrastructure/: test_config.py  test_models.py  test_smoke.py
